--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Game - Holding Page</title>
+    <style>
+        body {
+            background-color: black;
+            font-family: 'VT323', monospace;
+            font-size: 24px;
+            color: #00FF00;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <title>follow the happy path.</title>
     <script>
         let counter = 0;
         function updateText() {
@@ -16,6 +32,6 @@
     </script>
 </head>
 <body>
-    <h1>Follow the happy path. Great joy awaits<span id="ellipsis">.</span></h1>
+    <div id="message">follow the happy path. great joy awaits<span id="ellipsis">.</span></h1>
 </body>
 </html>
